config/k8s/front-end-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end
        image: front-end:v0.0.1
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
          requests:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    app: front-end
  ports:
    - name: front-end
      protocol: TCP
      port: 3000
      targetPort: 3000
