config/k8s/homerun-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homerun-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homerun
  template:
    metadata:
      labels:
        app: homerun
    spec:
      containers:
      - name: homerun
        image: homerun:v0.0.1
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
          requests:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: homerun-service
spec:
  selector:
    app: homerun
  ports:
    - name: homerun
      protocol: TCP
      port: 5000
      targetPort: 5000
