config/k8s/homerun-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homerun-mongod-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homerun-mongo
  template:
    metadata:
      labels:
        app: homerun-mongo
    spec:
      containers:
      - name: homerun-mongo
        image: mongo
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: homerun-mongo-service
spec:
  selector:
    app: homerun-mongo
  ports:
    - name: database
      protocol: TCP
      port: 27017
      targetPort: 27017
