config/k8s/query-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
# Use kind: StatefulSet here instead to have data persistence
# and have same volumes assigned to corresponding containers.
metadata:
  name: query-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-mongo
  template:
    metadata:
      labels:
        app: query-mongo
    spec:
      containers:
      - name: query-mongo
        image: mongo
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: query-mongo-service
spec:
  selector:
    app: query-mongo
  ports:
    - name: database
      protocol: TCP
      port: 27017
      targetPort: 27017
