config/k8s/stats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats
  template:
    metadata:
      labels:
        app: stats
    spec:
      containers:
        - name: stats
          image: stats:v0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: stats-service
spec:
  selector:
    app: stats
  ports:
    - name: stats
      protocol: TCP
      port: 5100
      targetPort: 5100
