config/k8s/stats.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stats-service
spec:
  containers:
  - name: stats
    image: stats:v0.0.1

---
apiVersion: v1
kind: Service
metadata:
  name: stats-service-clusterip
spec:
  selector:
    app: stats-service
  ports:
    - name: stats-service
      protocol: TCP
      port: 5100
      targetPort: 5100
