config/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: homerun-app.dev
    http:
      paths:
      - pathType: Prefix
        path: /api/homerun/get
        backend:
          service:
            name: homerun-service
            port: 
              number: 5000
